Added Wikitude stuff
wikitude sdk library and ARview layout.xml added.

--- a/Crumbpins/res/layout/activity_main.xml
+++ b/Crumbpins/res/layout/activity_main.xml
@@ -18,6 +18,13 @@
             android:text="@string/post"
             android:textAppearance="?android:attr/textAppearanceSmallInverse" />
 
+    <Button
+            android:id="@+id/ar_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="AR View"
+            android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+
     <fragment
             android:id="@+id/map_fragment"
             android:name="com.google.android.gms.maps.SupportMapFragment"
